--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,3 @@
 [all]
-{{ip_address}} ansible_ssh_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no -i'
+18.218.149.12 ansible_ssh_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
