--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,5 @@
 [all]
 18.218.149.12 ansible_ssh_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+[target_hosts]
+3.143.218.33 ansible_ssh_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
